Fix graph translation problem (paths sometimes out of viewbox)

--- a/nflow-explorer/src/styles/main.scss
+++ b/nflow-explorer/src/styles/main.scss
@@ -268,6 +268,8 @@ ul.listing {
 
 .svg-container {
   width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .svg-content-responsive {
